# github-followers

./: .gitignore  .stestr.conf  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
etc/: github-followers-api.conf
github_followers/: api.py  client.py
github_followers/tests/: test_api.py
