[metadata]
name = github-followers
summary = API for retrieving github followers
description-file =
    README.rst
author = Trevor McCasland
author-email = trevormccasland1@gmail.com
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    github_followers

[entry_points]
console_scripts =
    github-followers-api = github_followers.api:main

[wheel]
universal = 1
